# wisskas

./: 404.html  README.md  index.html  pyproject.toml
src/wisskas/: filter.py  serialize.py  string_utils.py  wisski.py
src/wisskas/cli/: endpoints.py  filter.py  main.py  paths.py
src/wisskas/templates/: entrypoint.py.jinja  model.py.jinja  query.rq.jinja
tests/wisski/: test_cli.py
